--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,5 +12,6 @@
   "contact_message_placeholder": "Your message here...",
   "page_not_found_content": "The page you are looking for may have been removed, renamed, or is temporarily unavailable.",
   "back_to_home": "Back to Home",
-  "get_started": "Get Started"
+  "book_now": "Book Now",
+  "header_title" :   "beachfront home rental - Ouistreham"
 }
