English translation Blog content

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,5 +13,6 @@
   "page_not_found_content": "The page you are looking for may have been removed, renamed, or is temporarily unavailable.",
   "back_to_home": "Back to Home",
   "book_now": "Book Now",
-  "header_title" :   "beachfront home rental - Ouistreham"
+  "header_title" :   "Villa les Tamaris - Ouistreham",
+  "seo_footer": "Seaside seminar - Seminar in Normandy - Seminar 2 hours from Paris - luxury villa rental by the sea - vacation rental with extraordinary sea view - vacation home rental - a weekend by the sea - seaside vacation - rental on the D-Day beaches - sea view in Calvados"
 }
