--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -13,6 +13,6 @@
   "page_not_found_content": "La page que vous recherchez a peut-être été supprimée, changée de nom ou temporairement inaccessible.",
   "back_to_home": "Retour à l'accueil",
   "book_now": "Réservez",
-  "header_title": "Villa les Tamaris - Ouistreham",
-  "seo_footer": "Séminaire en bord de mer - Séminaire en Normandie - Séminaire à 2 heures de paris - location villa de luxe en bord de mer - location de vacance avec vue mer extraordinaire - location de maison de vacances - un week-end en bord de mer - vacance à la mer - location sur les plages du débarquement - vue mer dans le calvados"
+  "header_title": "Villa Tamaris - Ouistreham",
+  "seo_footer": "Location vsaisonnière en bord de mer - location de vacance avec vue mer extraordinaire - location de maison de vacances - un week-end en bord de mer - vacances à la mer - location sur les plages du débarquement - vue mer dans le calvados - Séminaire en Normandie - Séminaire à 2 heures de paris"
 }
