--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -14,5 +14,5 @@
   "back_to_home": "Retour à l'accueil",
   "book_now": "Réservez",
   "header_title": "Villa Tamaris - Ouistreham",
-  "seo_footer": "Location vsaisonnière en bord de mer - location de vacance avec vue mer extraordinaire - location de maison de vacances - un week-end en bord de mer - vacances à la mer - location sur les plages du débarquement - vue mer dans le calvados - Séminaire en Normandie - Séminaire à 2 heures de paris"
+  "seo_footer": "Location saisonnière en bord de mer - location de vacance avec vue mer extraordinaire - location de maison de vacances - un week-end en bord de mer - vacances à la mer - location sur les plages du débarquement - vue mer dans le calvados - Séminaire en Normandie - Séminaire à 2 heures de paris"
 }
