--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -14,5 +14,6 @@
   "back_to_home": "Back to Home",
   "book_now": "Book Now",
   "header_title" :   "Villa Tamaris - Ouistreham",
-  "seo_footer": "Luxury villa rental by the sea - vacation rental with extraordinary sea view - vacation home rental - a weekend by the sea - seaside vacation - rental on the D-Day beaches - sea view in Calvados - Seaside seminar - Seminar in Normandy - Seminar 2 hours from Paris"
+  "seo_footer": "Luxury villa rental by the sea - vacation rental with extraordinary sea view - vacation home rental - a weekend by the sea - seaside vacation - rental on the D-Day beaches - sea view in Calvados - Seaside seminar - Seminar in Normandy - Seminar 2 hours from Paris",
+  "seo_gimmick": "Beachfront vacation home rental ouistreham calvados normandy"
 }
