add lightbox for description

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,7 +13,7 @@
   "page_not_found_content": "The page you are looking for may have been removed, renamed, or is temporarily unavailable.",
   "back_to_home": "Back to Home",
   "book_now": "Book Now",
-  "header_title" :   "Villa Tamaris - Ouistreham",
+  "header_title" :   "Villa Tamaris - 8 guests",
   "seo_footer": "Luxury villa rental by the sea - vacation rental with extraordinary sea view - vacation home rental - a weekend by the sea - seaside vacation - rental on the D-Day beaches - sea view in Calvados - Seaside seminar - Seminar in Normandy - Seminar 2 hours from Paris",
   "seo_gimmick": "Beachfront vacation home rental ouistreham calvados normandy"
 }
