--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -13,7 +13,7 @@
   "page_not_found_content": "La page que vous recherchez a peut-être été supprimée, changée de nom ou temporairement inaccessible.",
   "back_to_home": "Retour à l'accueil",
   "book_now": "Réservez",
-  "header_title": "Villa Tamaris - Ouistreham",
+  "header_title": "Villa Tamaris - 8 pers",
   "seo_footer": "Location saisonnière en bord de mer - location de vacance avec vue mer extraordinaire - location de maison de vacances - un week-end en bord de mer - vacances à la mer - location sur les plages du débarquement - vue mer dans le calvados - Séminaire en Normandie - Séminaire à 2 heures de paris",
   "seo_gimmick": "location de vacances vue mer à Ouistreham Calvados Normandie"
 }
